--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,5 +1,15 @@
 <%= form_with(model: task, local: true) do |f| %>
-  <%= f.label :content, 'タスク' %>
+  <% if task.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+        <% task.errors.full_tasks.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <%= f.label :content, 'メッセージ' %>
   <%= f.text_field :content %>
 
   <%= f.submit '投稿' %>
